feat: ajustando dominios