@@ -1,5 +1,6 @@
 package com.example.stylohub.domain.model.config;
 
+import com.example.stylohub.domain.exception.DomainValidationException;
 import com.example.stylohub.domain.model.WidgetType;
 
 public class LinkConfig implements WidgetConfig {
@@ -28,14 +29,14 @@ public class LinkConfig implements WidgetConfig {
 
     @Override
     public void validate() {
-        if (title == null || title.trim().isEmpty()) {
-            throw new IllegalArgumentException("O título do link não pode estar vazio.");
+        if (title == null || title.isBlank()) {
+            throw new DomainValidationException("O título do link não pode estar vazio.");
         }
-        if (url == null || url.trim().isEmpty()) {
-            throw new IllegalArgumentException("A URL não pode estar vazia.");
+        if (url == null || url.isBlank()) {
+            throw new DomainValidationException("A URL não pode estar vazia.");
         }
         if (!url.startsWith("http://") && !url.startsWith("https://")) {
-            throw new IllegalArgumentException("A URL deve começar com http:// ou https://");
+            throw new DomainValidationException("A URL deve começar com http:// ou https://");
         }
     }
 }
